<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/background_dark">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <View
        android:id="@+id/controlView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="visible"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playerParentCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">


            <ImageButton
                android:id="@+id/previousIB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/previewicon"
                app:layout_constraintBottom_toTopOf="@+id/seekerSB"
                app:layout_constraintEnd_toStartOf="@+id/rewindTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_previous"
                app:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/playIB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/playicon"
                app:layout_constraintBottom_toTopOf="@+id/seekerSB"
                app:layout_constraintEnd_toStartOf="@+id/forwardTV"
                app:layout_constraintStart_toEndOf="@+id/rewindTV"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_play"
                app:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/nextIB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/next"
                app:layout_constraintBottom_toTopOf="@+id/seekerSB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/forwardTV"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_next"
                app:tint="@android:color/white" />

            <SeekBar
                android:id="@+id/seekerSB"
                style="@android:style/Widget.Material.SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:progress="50"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@android:color/holo_blue_dark"
                android:thumbTint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playIB" />

            <TextView
                android:id="@+id/progressTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/counter"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekerSB" />

            <TextView
                android:id="@+id/durationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/duration"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekerSB" />

            <ImageButton
                android:id="@+id/rewindTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/rewind"
                app:layout_constraintBottom_toTopOf="@+id/seekerSB"
                app:layout_constraintEnd_toStartOf="@+id/playIB"
                app:layout_constraintStart_toEndOf="@+id/previousIB"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_fast_rewind"
                app:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/forwardTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/forward"
                app:layout_constraintBottom_toTopOf="@+id/seekerSB"
                app:layout_constraintEnd_toStartOf="@+id/nextIB"
                app:layout_constraintStart_toEndOf="@+id/playIB"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_fast_forward"
                app:tint="@android:color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
